--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#A1E2C8</color>
     <color name="backgroundColor">#FFFFFF</color>
+    <color name="colorPrimaryLight">#FFFFFF</color>
 </resources>
