--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,20 +43,49 @@
         android:id="@+id/advanced_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="15dp"
         android:text="@string/advanced_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrival_spinner" />
 
     <Button
+        style="@style/MiniButton"
+        android:id="@+id/selected_time"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:visibility="gone"
+        tools:text="16/9, 9:30"
+        app:layout_constraintRight_toLeftOf="@id/selected_adults"
+        app:layout_constraintTop_toBottomOf="@+id/advanced_search" />
+    <Button
+        style="@style/MiniButton"
+        android:id="@+id/selected_adults"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        tools:text="3"
+        app:layout_constraintEnd_toEndOf="@id/advanced_search"
+        app:layout_constraintStart_toStartOf="@id/advanced_search"
+        app:layout_constraintTop_toBottomOf="@+id/advanced_search" />
+    <Button
+        style="@style/MiniButton"
+        android:id="@+id/selected_children"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="20dp"
+        android:visibility="gone"
+        tools:text="3"
+        app:layout_constraintLeft_toRightOf="@id/selected_adults"
+        app:layout_constraintTop_toBottomOf="@+id/advanced_search" />
+
+    <Button
         style="@style/StandardButton"
         android:id="@+id/button"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="50dp"
         android:text="@string/find_journeys_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/advanced_search" />
+        app:layout_constraintTop_toBottomOf="@+id/advanced_search"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/departures_table"
