--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,11 @@
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">50dp</item>
     </style>
+    <style name="MiniButton" parent="TextAppearance.AppCompat">
+        <item name="android:background">@drawable/mini_button_shape</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:drawableRight">@drawable/ic_baseline_cancel_24</item>
+    </style>
 </resources>
