--- a/native/KotlinIOS/KotlinIOS/Base.lproj/Main.storyboard
+++ b/native/KotlinIOS/KotlinIOS/Base.lproj/Main.storyboard
@@ -174,53 +174,53 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="nly-db-6Pz"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jgQ-bT-rNl">
-                                    <size key="itemSize" width="128" height="39"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Jhz-7k-brG">
+                                    <size key="itemSize" width="104" height="28.5"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="advancedSearchCell" reuseIdentifier="advancedSearchCell" id="Hck-3v-sYE" customClass="AdvancedSearchViewCell" customModule="KotlinIOS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-5.5" width="128" height="39"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="195" height="28"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zvg-1Q-gvC">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="39"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="195" height="28"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8o-by-xcD">
-                                                    <rect key="frame" x="8" y="8" width="80" height="20.5"/>
-                                                    <color key="backgroundColor" red="0.55442661049999997" green="0.89928728339999997" blue="0.77646487949999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="80" id="fz2-QL-eFl"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g8P-1e-hVc">
-                                                    <rect key="frame" x="92" y="5.5" width="32.5" height="27.5"/>
+                                                    <rect key="frame" x="171" y="4.5" width="20" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="g8P-1e-hVc" secondAttribute="height" multiplier="1:1" id="Mec-S5-f8e"/>
                                                     </constraints>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <state key="normal" backgroundImage="xmark.circle" catalog="system"/>
                                                     <connections>
-                                                        <action selector="cancelButton:" destination="Hck-3v-sYE" eventType="touchUpInside" id="peB-rd-IhV"/>
+                                                        <action selector="cancelButton:" destination="Hck-3v-sYE" eventType="touchUpInside" id="28X-WG-qEt"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8o-by-xcD">
+                                                    <rect key="frame" x="8" y="8" width="155" height="12"/>
+                                                    <color key="backgroundColor" red="0.55442661049999997" green="0.89928728339999997" blue="0.77646487949999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" red="0.55442661049999997" green="0.89928728339999997" blue="0.77646487949999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="g8P-1e-hVc" secondAttribute="trailing" constant="4" id="1UK-pT-kpc"/>
+                                                <constraint firstAttribute="trailing" secondItem="g8P-1e-hVc" secondAttribute="trailing" constant="4" id="3cd-7A-AB4"/>
                                                 <constraint firstItem="g8P-1e-hVc" firstAttribute="top" secondItem="zvg-1Q-gvC" secondAttribute="top" constant="4" id="CFQ-tr-anv"/>
                                                 <constraint firstItem="A8o-by-xcD" firstAttribute="top" secondItem="zvg-1Q-gvC" secondAttribute="top" constant="8" id="PmU-k5-emE"/>
                                                 <constraint firstItem="A8o-by-xcD" firstAttribute="leading" secondItem="zvg-1Q-gvC" secondAttribute="leading" constant="8" id="Z1H-yE-zJS"/>
                                                 <constraint firstAttribute="bottom" secondItem="A8o-by-xcD" secondAttribute="bottom" constant="8" id="izn-lc-o6o"/>
+                                                <constraint firstItem="g8P-1e-hVc" firstAttribute="leading" secondItem="A8o-by-xcD" secondAttribute="trailing" constant="8" id="z1s-hq-EOT"/>
+                                                <constraint firstAttribute="bottom" secondItem="g8P-1e-hVc" secondAttribute="bottom" constant="4" id="zw6-qN-d9P"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="195" height="28"/>
                                         <connections>
-                                            <outlet property="cellLabel" destination="A8o-by-xcD" id="zhT-fO-mfS"/>
+                                            <outlet property="choiceLabel" destination="A8o-by-xcD" id="uks-AL-AKX"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
