Changed textView to wrap adult/child count in advanced search

--- a/app/src/main/res/layout/activity_pop_up_window.xml
+++ b/app/src/main/res/layout/activity_pop_up_window.xml
@@ -52,7 +52,7 @@
         style="@style/SubHeading"
         android:id="@+id/in_num_adults"
         android:layout_width="100dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@id/num_of_adults"
@@ -93,7 +93,7 @@
         style="@style/SubHeading"
         android:id="@+id/in_num_children"
         android:layout_width="100dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@id/num_of_children"
